--- a/src/assets/styles/layouts/eventosSection.module.css
+++ b/src/assets/styles/layouts/eventosSection.module.css
@@ -82,7 +82,7 @@
 .btnsBox {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 2rem;
   margin-top: 4rem;
@@ -125,55 +125,71 @@
   margin-right: 1rem;
 }
 
-.partners {
-  width: 100%;
-  overflow: hidden;
-  position: relative;
+/* NUEVOS */
 
+.partnersSlider {
+  width: 100%;
+  height: var(--slider-h);
+  max-height: 30rem;
+  overflow: hidden;
+  max-width: 100vw;
   -webkit-mask-image: linear-gradient(
     to right,
-    transparent 0,
-    #000 6%,
-    #000 94%,
-    transparent 100%
+    transparent,
+    #000 10% 90%,
+    transparent
   );
-  mask-image: linear-gradient(
-    to right,
-    transparent 0,
-    #000 6%,
-    #000 94%,
-    transparent 100%
-  );
+  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
 }
 
-.track {
+.sliderTrack {
   display: flex;
-  width: max-content;
-  gap: 4rem;
-  animation: marquee 30s linear infinite;
-  will-change: transform;
-}
-
-.partners:hover .track {
-  animation-play-state: paused;
-}
-
-.group {
-  display: flex;
-  gap: 4rem;
-}
-
-.partnersImg {
-  display: block;
-  height: 6rem;
-}
-.partnersImg img {
+  width: 100%;
   height: 100%;
-  filter: grayscale(100%);
-  transition: filter 0.3s ease;
+  min-width: calc(var(--slider-w) * var(--quantity));
+  position: relative;
 }
-.partnersImg:hover img {
-  filter: grayscale(0%);
+
+.sliderImgBox {
+  width: var(--slider-w);
+  height: var(--slider-h);
+  position: absolute;
+  left: 100%;
+  animation: autoRun 20s linear infinite;
+  animation-delay: calc(
+    (20s / var(--quantity)) * (var(--position) - 1)
+  ) !important;
+  transition: filter 0.5s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sliderImg {
+  height: 100%;
+}
+
+.sliderImg img {
+  height: 100%;
+  object-fit: contain;
+}
+
+.partnersSlider:hover .sliderImgBox {
+  animation-play-state: paused !important;
+  filter: grayscale(0.8);
+}
+
+.partnersSlider:hover .sliderImgBox:hover {
+  filter: grayscale(0);
+}
+
+@keyframes autoRun {
+  from {
+    left: 100%;
+  }
+  to {
+    left: calc(var(--slider-w) * -1);
+  }
 }
 
 @keyframes marquee {
@@ -206,14 +222,18 @@
   }
 
   .btnsBox {
-    position: sticky;
+    position: relative;
     width: 60%;
     justify-self: flex-end;
     display: flex;
     flex-direction: row;
+    margin-left: auto;
+    margin-right: 0;
     margin-top: -6rem;
     margin-bottom: 4rem;
     padding-right: 4rem;
+
+    justify-content: space-between;
   }
 
   .partnersBox {
@@ -222,12 +242,7 @@
   }
 
   .partnersBox h3 {
-    /* width: 60%; */
     justify-content: flex-start;
-  }
-
-  .partners {
-    /* width: 40%; */
   }
 }
 
